# sq-co-bot

./: .gitignore  app.py  cdk.json  co.py  deploy.sh  pyproject.toml
.github/workflows/: deploy-production.yml  lint-check.yml  pull_request_check.yml  push_to_Master.yml  python-app.yml
cobot/: audio_source.py  voice_bot.py
deployment/: bot_stack.py
squadron_co_bot/: co.py
tests/: test_voice_bot.py
voice_container/: Dockerfile  requirements.txt
