[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "py-cord>=2.0",
  "fuzzywuzzy>=0.18.0",
  "levenshtein>=0.24.0",
  "pynacl",
]
name = "squadron-co-bot"
requires-python = ">=3.8"
version = "0.0.1"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.gitignore",
  "/.git*",
  "*.json",
]
include = [
  "/squadron_co_bot/*.py",
  "/squadron_co_bot/sounds/*"
]
